GNOME Bugzilla – Bug 669863
[0.11] [x264enc] X264 encoder doesn't unmap input frame
Last modified: 2012-02-11 13:53:13 UTC
Created attachment 207325 [details] [review] Patch resulting in massive memory leak.
Pushed, thanks! commit 0f9e7c386366d19c6038eb58cf7e6f74b754f783 Author: Matej Knopp <matej.knopp@gmail.com> Date: Sat Feb 11 05:38:41 2012 -0500 x264enc: unmap video frame after encoding Fixes major memory leak. https://bugzilla.gnome.org/show_bug.cgi?id=669863