x264enc: unmap video frame after encoding

Fixes major memory leak.

https://bugzilla.gnome.org/show_bug.cgi?id=669863